--- a/Dockerfile-adm
+++ b/Dockerfile-adm
@@ -2,14 +2,13 @@
 FROM python:3.8
 
 # Script python
-COPY server.py /app/
+COPY adm.py /app/
 
 
 #diretório de trabalho no contêiner
 WORKDIR /app/
 
-# Exponha a porta do servidor
-EXPOSE 3000
+
 
 # Comando padrão para executar scripts
-CMD ["python", "server.py"]
+CMD ["python", "adm.py"]
